--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "compression": "^1.5.2",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "mongoose": "^5.2.7",
+    "mongoose-string-query": "^0.2.5",
+    "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.8.0",
     "resource-router-middleware": "^0.6.0"
   },
